--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.3)
 
-add_executable(unittest main.cpp)
+file(GLOB TEST_INCLUDE ${INCLUDE_DIR}/test/*.h)
+
+add_executable(unittest ${TEST_INCLUDE} main.cpp)
 target_link_libraries(unittest graph)
 
 install(TARGETS	unittest DESTINATION ${BIN_DIR})
