adding opengl support

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -1,8 +1,10 @@
 cmake_minimum_required(VERSION 3.3)
 
 file(GLOB TEST_INCLUDE ${INCLUDE_DIR}/test/*.h)
+file(GLOB TEST_SRC *.cpp)
 
-add_executable(unittest ${TEST_INCLUDE} main.cpp)
-target_link_libraries(unittest graph)
+MESSAGE("${OPENGL_LIBRARIES}")
+add_executable(unittest ${TEST_INCLUDE} ${TEST_SRC})
+target_link_libraries(unittest ${OPENGL_LIBRARIES} glfw ${GLEW_LIBRARIES} gfx)
 
 install(TARGETS	unittest DESTINATION ${BIN_DIR})
