--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,5 +2,6 @@ cmake_minimum_required(VERSION 3.3)
 
 # dependent libraries
 add_subdirectory(graph)
+add_subdirectory(gfx)
 add_subdirectory(test)
 
