adding rendering stuff

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -5,6 +5,6 @@ file(GLOB TEST_SRC *.cpp)
 
 MESSAGE("${OPENGL_LIBRARIES}")
 add_executable(unittest ${TEST_INCLUDE} ${TEST_SRC})
-target_link_libraries(unittest ${OPENGL_LIBRARIES} glfw ${GLEW_LIBRARIES} gfx)
+target_link_libraries(unittest ${OPENGL_LIBRARIES} glfw ${GLEW_LIBRARIES} gfx xml)
 
 install(TARGETS	unittest DESTINATION ${BIN_DIR})
