--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -4,7 +4,8 @@ file(GLOB TEST_INCLUDE ${INCLUDE_DIR}/test/*.h)
 file(GLOB TEST_SRC *.cpp)
 
 MESSAGE("${OPENGL_LIBRARIES}")
+
 add_executable(unittest ${TEST_INCLUDE} ${TEST_SRC})
-target_link_libraries(unittest ${OPENGL_LIBRARIES} glfw ${GLEW_LIBRARIES} gfx xml)
+target_link_libraries(unittest ${OPENGL_LIBRARIES} glfw ${GLEW_LIBRARIES} ${FREETYPE_LIBRARIES} gfx xml )
 
 install(TARGETS	unittest DESTINATION ${BIN_DIR})
