--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,5 +4,6 @@ cmake_minimum_required(VERSION 3.3)
 add_subdirectory(graph)
 add_subdirectory(gfx)
 add_subdirectory(test)
+add_subdirectory(monkey)
 add_subdirectory(xml)
 
