adding activities, scripts and scheduler

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -6,7 +6,7 @@ file(GLOB TEST_SRC *.cpp)
 MESSAGE("${OPENGL_LIBRARIES}")
 
 add_executable(unittest ${TEST_INCLUDE} ${TEST_SRC})
-target_link_libraries(unittest ${OPENGL_LIBRARIES} glfw ${GLEW_LIBRARIES} ${FREETYPE_LIBRARIES} gfx xml )
+target_link_libraries(unittest ${OPENGL_LIBRARIES} glfw ${GLEW_LIBRARIES} ${FREETYPE_LIBRARIES} ${PNG_LIBRARY} ${JPEG_LIBRARIES} gfx xml )
 if(APPLE)
    target_link_libraries (unittest ${BZ2_LIB} ${COCOA_LIBRARY} ${IOKIT_LIBRARY} ${CV_LIBRARY})
 endif(APPLE)
