--- a/src/platformer/CMakeLists.txt
+++ b/src/platformer/CMakeLists.txt
@@ -7,6 +7,6 @@ file(GLOB PLATFORMER_SRC *.cpp components/*.cpp activities/*.cpp states/*.cpp)
 add_executable(platformer ${PLATFORMER_INCLUDE} ${PLATFORMER_SRC})
 target_link_libraries(platformer ${OPENGL_LIBRARIES} glfw ${GLEW_LIBRARIES} ${FREETYPE_LIBRARIES} ${LUA_LIBRARIES} ${PNG_LIBRARY} ${JPEG_LIBRARIES} gfx)
 if(APPLE)
-   target_link_libraries (monkey ${BZ2_LIB} ${COCOA_LIBRARY} ${IOKIT_LIBRARY} ${CV_LIBRARY})
+   target_link_libraries (platformer ${BZ2_LIB} ${COCOA_LIBRARY} ${IOKIT_LIBRARY} ${CV_LIBRARY})
 endif(APPLE)
 install(TARGETS	platformer DESTINATION ${BIN_DIR})
