adding moving platform

--- a/src/platformer/CMakeLists.txt
+++ b/src/platformer/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.3)
 
 file(GLOB PLATFORMER_INCLUDE ${INCLUDE_DIR}/platformer/*.h ${INCLUDE_DIR}/platformer/components/*.h ${INCLUDE_DIR}/platformer/activities/*.h ${INCLUDE_DIR}/platformer/states/*.h)
-file(GLOB PLATFORMER_SRC *.cpp components/*.cpp activities/*.cpp states/*.cpp)
+file(GLOB PLATFORMER_SRC *.cpp components/*.cpp activities/*.cpp states/*.cpp lua/*.cpp)
 
 
 add_executable(platformer ${PLATFORMER_INCLUDE} ${PLATFORMER_SRC})
