--- a/src/monkey/CMakeLists.txt
+++ b/src/monkey/CMakeLists.txt
@@ -6,7 +6,10 @@ file(GLOB MONKEY_SRC *.cpp components/*.cpp activities/*.cpp)
 #find_package(Lua REQUIRED)
 
 add_executable(monkey ${MONKEY_INCLUDE} ${MONKEY_SRC})
-target_link_libraries(monkey ${OPENGL_LIBRARIES} glfw ${GLEW_LIBRARIES} ${FREETYPE_LIBRARIES} ${LUA_LIBRARIES} ${PNG_LIBRARY} ${JPEG_LIBRARIES} gfx)
+
+include_directories(${INCLUDE_DIR} ${FREETYPE_INCLUDE_DIRS} ${GLM_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS} ${LUA_INCLUDE_DIR})
+
+target_link_libraries(monkey glm ${OPENGL_LIBRARIES} glfw ${GLEW_LIBRARIES} ${FREETYPE_LIBRARIES} ${LUA_LIBRARIES} ${PNG_LIBRARY} ${JPEG_LIBRARIES} gfx)
 if(APPLE)
    target_link_libraries (monkey ${BZ2_LIB} ${COCOA_LIBRARY} ${IOKIT_LIBRARY} ${CV_LIBRARY})
 endif(APPLE)
