adding alglib, skeletal animations

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,5 +7,6 @@ add_subdirectory(test)
 add_subdirectory(monkey)
 add_subdirectory(platformer)
 add_subdirectory(xml)
+add_subdirectory(alglib)
 # add_subdirectory(phy)
 add_subdirectory(spriteview)
