--- a/src/alglib/CMakeLists.txt
+++ b/src/alglib/CMakeLists.txt
@@ -7,4 +7,4 @@ add_library(alglib STATIC ${GFX_INCLUDE} ${GFX_SOURCE})
 
 include_directories(${INCLUDE_DIR} ${FREETYPE_INCLUDE_DIRS} ${GLM_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS} ${LUA_INCLUDE_DIR})
 
-install(TARGETS gfx DESTINATION ${LIB_DIR})
+install(TARGETS alglib DESTINATION ${LIB_DIR})
