--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,5 +8,5 @@ add_subdirectory(monkey)
 add_subdirectory(platformer)
 add_subdirectory(xml)
 add_subdirectory(alglib)
-# add_subdirectory(phy)
+add_subdirectory(phy)
 add_subdirectory(spriteview)
