adding support for EXTENSIONS

--- a/src/platformer/CMakeLists.txt
+++ b/src/platformer/CMakeLists.txt
@@ -12,7 +12,7 @@ add_executable(platformer ${PLATFORMER_INCLUDE} ${PLATFORMER_SRC})
 include_directories(${INCLUDE_DIR} ${FREETYPE_INCLUDE_DIRS} ${GLM_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS} ${LUA_INCLUDE_DIR})
 
 target_link_libraries(platformer ${OPENGL_LIBRARIES} glfw ${GLEW_LIBRARIES} ${FREETYPE_LIBRARIES} ${LUA_LIBRARIES} ${PNG_LIBRARY}
-        ${JPEG_LIBRARIES} gfx alglib)
+        ${JPEG_LIBRARIES} ${CMAKE_DL_LIBS} gfx alglib)
 if(APPLE)
    target_link_libraries (platformer ${BZ2_LIB} ${COCOA_LIBRARY} ${IOKIT_LIBRARY} ${CV_LIBRARY})
 endif(APPLE)
