--- a/data/bb/src/CMakeLists.txt
+++ b/data/bb/src/CMakeLists.txt
@@ -11,5 +11,6 @@ set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../lib)
 
 add_library(bubble SHARED
     zenchan.cpp
+    bub.cpp
     factories.cpp
 )
