adding dynamic loader method for different platforms

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,7 +6,7 @@ add_subdirectory(xml)
 add_subdirectory(alglib)
 add_subdirectory(monkey)
 #add_subdirectory(test)
-#add_subdirectory(scumm)
+add_subdirectory(scumm)
 #add_subdirectory(smb)
 #add_subdirectory(platformer)
 #add_subdirectory(phy)
