--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.3)
 
 # dependent libraries
 #add_subdirectory(graph)
-add_subdirectory(xml)
+#add_subdirectory(xml)
 add_subdirectory(alglib)
 add_subdirectory(monkey)
 #add_subdirectory(test)
