--- a/src/monkey/CMakeLists.txt
+++ b/src/monkey/CMakeLists.txt
@@ -6,6 +6,8 @@ file(GLOB MONKEY_INCLUDE ${INCLUDE_DIR}/gfx/*.h ${INCLUDE_DIR}/gfx/lua/*.h ${INC
         ${INCLUDE_DIR}/gfx/entities/*.h ${INCLUDE_DIR}/gfx/states/*.h ${INCLUDE_DIR}/gfx/shader/*.h)
 file(GLOB MONKEY_SOURCE *.cpp lua/*.cpp components/*.cpp activities/*.cpp math/*.cpp factories/*.cpp entities/*.cpp states/*.cpp model/*.cpp)
 
+set(CMAKE_ENABLE_EXPORTS ON)
+
 add_executable(monkey ${MONKEY_INCLUDE} ${MONKEY_SOURCE})
 
 message(${LUA_INCLUDE_DIR})
