--- a/src/scumm/CMakeLists.txt
+++ b/src/scumm/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.3)
 
-add_library(scumm SHARED
+add_library(scumm MODULE
         activities/walk.cpp
         activities/turn.cpp
         activities/say.cpp
@@ -11,3 +11,4 @@ add_library(scumm SHARED
 
 include_directories(${INCLUDE_DIR} ${FREETYPE_INCLUDE_DIRS} ${GLM_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS} ${LUA_INCLUDE_DIR})
 
+target_link_libraries(scumm monkey)
