--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,7 +6,7 @@ cmake_minimum_required(VERSION 3.3)
 add_subdirectory(alglib)
 add_subdirectory(monkey)
 #add_subdirectory(test)
-#add_subdirectory(scumm)
+add_subdirectory(scumm)
 #add_subdirectory(smb)
 #add_subdirectory(platformer)
 #add_subdirectory(phy)
