--- a/src/scumm/CMakeLists.txt
+++ b/src/scumm/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.3)
 
-add_library(scumm SHARED
+add_executable(scumm
+		main.cpp
         activities/walk.cpp
         activities/turn.cpp
         activities/say.cpp
