--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,7 +7,7 @@ add_subdirectory(alglib)
 add_subdirectory(monkey)
 #add_subdirectory(test)
 add_subdirectory(scumm)
-#add_subdirectory(smb)
+add_subdirectory(smb)
 #add_subdirectory(platformer)
 #add_subdirectory(phy)
 #add_subdirectory(spriteview)
