--- a/src/phy/CMakeLists.txt
+++ b/src/phy/CMakeLists.txt
@@ -1,24 +1,24 @@
 cmake_minimum_required(VERSION 3.3)
 
-find_package(BLAS)
-find_package(LAPACK)
-find_package(LAPACKE)
+#find_package(BLAS)
+#find_package(LAPACK)
+#find_package(LAPACKE)
 find_package(Bullet REQUIRED)
 
-if(LAPACK_FOUND AND BLAS_FOUND)
-   set(lapackblas_libraries ${BLAS_LIBRARIES} ${LAPACKE_LIBRARIES})
-    message ("FOFOFOFOFO")
-endif()
-
-file(GLOB PHY_INCLUDE ${INCLUDE_DIR}/phy/*.h ${INCLUDE_DIR}/phy/components/*.h ${INCLUDE_DIR}/phy/activities/*.h ${INCLUDE_DIR}/phy/states/*.h)
-file(GLOB PHY_SRC *.cpp components/*.cpp activities/*.cpp states/*.cpp lua/*.cpp)
+message(STATUS "bullet libs ${BULLET_LIBRARIES}")
 
 
+add_executable(phy
+        main.cpp
+        factories.cpp
+        rigidbody.cpp
+        btshapewrapper.cpp
+        bulletengine.cpp)
 
+include_directories(${INCLUDE_DIR} ${FREETYPE_INCLUDE_DIRS} ${GLM_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS} ${LUA_INCLUDE_DIR} ${BULLET_INCLUDE_DIRS})
+#include_directories(${BULLET_INCLUDE_DIRS})
+#target_link_libraries(phy ${BULLET_LIBRARIES})
+target_link_libraries(phy monkey ${OPENGL_LIBRARIES} glfw ${GLEW_LIBRARIES} ${FREETYPE_LIBRARIES}
+        ${BULLET_LIBRARIES} ${LUA_LIBRARIES} ${PNG_LIBRARY} ${JPEG_LIBRARIES})
+ #        ${BULLET_LIBRARIES} gfx)
 
-add_executable(phy ${PHY_INCLUDE} ${PHY_SRC})
-target_link_libraries(phy ${OPENGL_LIBRARIES} glfw ${GLEW_LIBRARIES} ${FREETYPE_LIBRARIES} ${LUA_LIBRARIES} ${PNG_LIBRARY} ${JPEG_LIBRARIES} ${lapackblas_libraries} gfx)
-if(APPLE)
-   target_link_libraries (phy ${BZ2_LIB} ${COCOA_LIBRARY} ${IOKIT_LIBRARY} ${CV_LIBRARY})
-endif(APPLE)
-install(TARGETS	phy DESTINATION ${BIN_DIR})
