--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,5 +9,5 @@ add_subdirectory(monkey)
 add_subdirectory(scumm)
 add_subdirectory(smb)
 #add_subdirectory(platformer)
-#add_subdirectory(phy)
+add_subdirectory(phy)
 #add_subdirectory(spriteview)
