--- a/src/scumm/CMakeLists.txt
+++ b/src/scumm/CMakeLists.txt
@@ -11,6 +11,6 @@ add_executable(scumm
         factories.cpp
 		lua.cpp)
 
-include_directories(${INCLUDE_DIR} ${FREETYPE_INCLUDE_DIRS} ${GLM_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS} ${LUA_INCLUDE_DIR})
+include_directories(${INCLUDE_DIR} ${PYBIND_INCLUDE_DIR} ${Python_INCLUDE_DIRS} ${FREETYPE_INCLUDE_DIRS} ${GLM_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS} ${LUA_INCLUDE_DIR})
 
 target_link_libraries(scumm monkey)
