--- a/src/monkey/CMakeLists.txt
+++ b/src/monkey/CMakeLists.txt
@@ -14,7 +14,7 @@ add_library(monkey ${MONKEY_INCLUDE} ${MONKEY_SOURCE})
 
 include_directories(${INCLUDE_DIR} ${PYBIND_INCLUDE_DIR} ${Python_INCLUDE_DIRS} ${FREETYPE_INCLUDE_DIRS} ${GLM_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS} ${LUA_INCLUDE_DIR})
 
-target_link_libraries(monkey ${OPENGL_LIBRARIES} ${Python_LIBRARIES} glfw ${GLEW_LIBRARIES} ${FREETYPE_LIBRARIES}
+target_link_libraries(monkey ${OPENGL_LIBRARIES} ${Python_LIBRARIES} glfw GLEW::GLEW ${FREETYPE_LIBRARIES}
 		${LUA_LIBRARIES} ${PNG_LIBRARY} ${JPEG_LIBRARIES} ${CMAKE_DL_LIBS} ${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY} alglib)
 
 
