adding scripts in py

--- a/data/mi1_py/sprites/01.yaml
+++ b/data/mi1_py/sprites/01.yaml
@@ -1,12 +1,49 @@
 ---
 fire:
-  sheet: "sprites/sprites1.png"
+  sheet: "gfx/sprites/sprites1.png"
+  type: "asset.sprite"
   animations:
     def:
-      - [409,479,24,32]
-      - [435,479,24,32]
-      - [461,479,24,32]
-      - [487,479,24,32]
-ciao:
-  2
-
+      loop: true
+      frames:
+        - [409, 479, 24, 32]
+        - [[435, 479, 24, 32]]
+        - [461, 479, 24, 32]
+        - [487, 479, 24, 32]
+guybrush:
+  sheet: "gfx/sprites/guybrush.png"
+  type: 'asset.sprite'
+  animations:
+    idle_e:
+      frames:
+        - [2, 51, 19, 47, 10, 0]
+    idle_n:
+      frames:
+        - [49, 51, 20, 47, 12, 0]
+    idle_s:
+      frames:
+        - [24, 51, 22, 47, 12, 0]
+    walk_e:
+      frames:
+        - [4,1,32,47,17,0]
+        - [39,1,17,47,13,0]
+        - [60,1,19,47,12,0]
+        - [83,1,31,47,16,0]
+        - [117,1,18,47,13,0]
+        - [141,1,19,47,12,0]
+    walk_s:
+      frames:
+        - [207,51,22,47,11,0]
+        - [231,51,21,47,11,0]
+        - [3,101,20,47,10,0]
+        - [25,101,22,47,12,0]
+        - [49,101,21,47,11,0]
+        - [72,101,20,47,11,0]
+    walk_n:
+      frames:
+        - [72,51,21,47,10,0]
+        - [95,51,21,47,10,0]
+        - [118,51,21,47,10,0]
+        - [139,51,21,47,10,0]
+        - [163,51,21,47,10,0]
+        - [186,51,19,47,8,0]
