working with python

--- a/data/mi1_py/sprites/01.yaml
+++ b/data/mi1_py/sprites/01.yaml
@@ -47,3 +47,39 @@ guybrush:
         - [139,51,21,47,10,0]
         - [163,51,21,47,10,0]
         - [186,51,19,47,8,0]
+    talk_e:
+      frames:
+        - [[157,112,19,36,10,0], [179,101,11,12,7,-35]]
+        - [[157,112,19,36,10,0], [192,101,11,12,7,-35]]
+        - [[157,112,19,36,10,0], [205,101,11,12,7,-35]]
+        - [[157,112,19,36,10,0], [179,115,11,12,7,-35]]
+        - [[157,112,19,36,10,0], [192,101,11,12,7,-35]]
+        - [[157,112,19,36,10,0], [179,101,11,12,7,-35]]
+        - [[157,112,19,36,10,0], [192,115,11,12,7,-35]]
+        - [[157,112,19,36,10,0], [205,115,11,12,7,-35]]
+        - [[157,112,19,36,10,0], [179,101,11,12,7,-35]]
+        - [[157,112,19,36,10,0], [192,115,11,12,7,-35]]
+        - [[157,112,19,36,10,0], [179,101,11,12,7,-35]]
+        - [[157,112,19,36,10,0], [205,101,11,12,7,-35]]
+    talk_s:
+      frames:
+        - [[164,12,22,36,12,0], [179,129,11,13,6,-34]]
+        - [[164,12,22,36,12,0], [192,129,11,13,6,-34]]
+        - [[164,12,22,36,12,0], [179,129,11,13,6,-34]]
+        - [[164,12,22,36,12,0], [192,129,11,13,6,-34]]
+        - [[164,12,22,36,12,0], [205,129,11,13,6,-34]]
+        - [[164,12,22,36,12,0], [179,143,11,13,6,-34]]
+        - [[164,12,22,36,12,0], [192,129,11,13,6,-34]]
+        - [[164,12,22,36,12,0], [192,143,11,13,6,-34]]
+        - [[164,12,22,36,12,0], [205,143,11,13,6,-34]]
+        - [[164,12,22,36,12,0], [192,143,11,13,6,-34]]
+        - [[164,12,22,36,12,0], [179,129,11,13,6,-34]]
+        - [[164,12,22,36,12,0], [192,129,11,13,6,-34]]
+        - [[164,12,22,36,12,0], [205,143,11,13,6,-34]]
+    talk_n:
+      frames:
+        - [[189,12,20,36,12,0], [220,101,11,12,7,-35]]
+        - [[189,12,20,36,12,0], [233,101,11,12,7,-35]]
+        - [[189,12,20,36,12,0], [220,101,11,12,7,-35]]
+        - [[189,12,20,36,12,0], [233,101,11,12,7,-35]]
+        - [[189,12,20,36,12,0], [220,115,11,12,7,-35]]
