--- a/data/mi1_py/sprites/01.yaml
+++ b/data/mi1_py/sprites/01.yaml
@@ -83,3 +83,19 @@ guybrush:
         - [[189,12,20,36,12,0], [220,101,11,12,7,-35]]
         - [[189,12,20,36,12,0], [233,101,11,12,7,-35]]
         - [[189,12,20,36,12,0], [220,115,11,12,7,-35]]
+lookout:
+  sheet: 'gfx/sprites/sprites1.png'
+  type: 'asset.sprite'
+  animations:
+    idle_e:
+      frames:
+        - [[170,457,20,37,11,0],[173,495,11,13,4,-32]]
+    idle_s:
+      frames:
+        - [[193,459,23,35,11,0],[186,495,9,14,5,0]]
+    talk_e:
+      frames:
+        - [[170,457,20,37,11,0],[173,495,11,13,5,0]]
+        - [[170,457,20,37,11,0],[197,496,11,14,5,0]]
+        - [[170,457,20,37,11,0],[210,496,11,13,5,0]]
+
