--- a/data/mi1_py/sprites/01.yaml
+++ b/data/mi1_py/sprites/01.yaml
@@ -98,4 +98,10 @@ lookout:
         - [[170,457,20,37,11,0],[173,495,11,13,5,0]]
         - [[170,457,20,37,11,0],[197,496,11,14,5,0]]
         - [[170,457,20,37,11,0],[210,496,11,13,5,0]]
-
+    talk_s:
+      frames:
+        - [[193,459,23,35,11,0], [186,495,9,14,5,0]]
+        - [[193,459,23,35,11,0], [223,496,9,15,5,0]]
+        - [[193,459,23,35,11,0], [234,496,9,13,5,0]]
+        - [[193,459,23,35,11,0], [223,496,9,15,5,0]]
+        
