--- a/data/mi1_py/text/eng/text.yaml
+++ b/data/mi1_py/text/eng/text.yaml
@@ -82,3 +82,6 @@ dialogues:
     52: "I'm over here."
     53: "Thranwook."
     54: "Thrumwink."
+lines:
+  1: "Re-elect Governor Marley."
+  2: "\"When there's only one candidate, there's only one choice.\""
