--- a/data/smb_py/sprites/01.yaml
+++ b/data/smb_py/sprites/01.yaml
@@ -22,6 +22,9 @@ mario:
       box: 0
       frames:
         - [80, 0, 16, 16, 8, 0]
+    dead:
+      frames:
+        - [96, 0, 16, 16, 8, 0]
 supermario:
   sheet: "gfx/smb1.png"
   thickness: 1
@@ -82,6 +85,44 @@ mushroom:
       box: 0
       frames:
         - [48, 16, 16, 16, 8, 0]
+goomba:
+  sheet: 'gfx/smb1.png'
+  type: 'asset.boxed'
+  boxes:
+    - [-8, 0, 8, 16]
+  animations:
+    walk:
+      box: 0
+      frames:
+        - [112, 0, 16, 16, 8, 0]
+        - [128, 0, 16, 16, 8, 0]
+    dead:
+      frames:
+        - [144, 0, 16, 16, 8, 0]
+
+koopa:
+  sheet: 'gfx/smb1.png'
+  type: 'asset.boxed'
+  boxes:
+    - [-8, 0, 8, 24]
+    - [-8, 0, 8, 16]
+  animations:
+    walk:
+      box: 0
+      frames:
+        - [0, 16, 16, 32, 8, 0]
+        - [16, 16, 16, 32, 8, 0]
+    hide:
+      box: 1
+      frames:
+        - [32, 32, 16, 16, 8, 0]
+    hide_blink:
+      box: 1
+      frames:
+        - [32, 32, 16, 16, 8, 0]
+        - [32, 16, 16, 16, 8, 0]
+
+
 pickupcoin:
   sheet: 'gfx/smb1.png'
   type: 'asset.boxed'
