--- a/data/smb_py/rooms/world1_1.yaml
+++ b/data/smb_py/rooms/world1_1.yaml
@@ -32,7 +32,7 @@
       d: [[16, 5], [22, 9], [23, 5], [94, 9], [106,5], [109, 5], [112, 5], [129,9], [130,9], [170, 5]]
     - template: [warp]
       d: [ [57.5, 6, [2, 25], [0, 256, 256, 512]] ]
-    - template: [hotspot]
+    - template: [warph]
       d: [ [13, 18, [164, 0], [0, 3584, 0, 256]]]
     - template: [coin]
       d: [[4,21],[5,21],[6, 21],[7, 21], [8,21], [9, 21], [10, 21],
@@ -47,5 +47,16 @@
         [105, 2, 117, 2], [105, 2, 118.5, 2], [115, 2, 127, 2], [115, 2, 128.5, 2], [118, 2, 130.5,2], [118,2,132,2]]
     - template: [spawn, koopa]
       d: [ [90, 2, 110, 2]]
+    - template: [hotspot, flag]
+      d: [ [198.4, 3, 0.2, 100]]
+    - template: [hotspot, endlevel]
+      d: [ [205, 2, 1, 1]]
+    - template: [tileMap, flagpole]
+      d: [ [198, 3] ]
+    - template: [tileMap, castle]
+      d: [[202, 2, -1]]
+    - template: [sprite, flag]
+      d: [[198, 11,-0.5, 'flag']]
 
+  
 
